--- a/styles/small.css
+++ b/styles/small.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
     font-size: 1.5rem;
-    color: black;
+    color: whitesmoke;
 }
 
 h2 {
@@ -27,7 +27,7 @@ h2 {
 header,
 footer {
     text-align: center;
-    background-color: rgb(46, 61, 106);
+    background-color: rgb(1, 10, 35);
     width: 750px;
     color:#ccc;
 }
