Change BYUI footer link

--- a/styles/small.css
+++ b/styles/small.css
@@ -62,7 +62,11 @@ header {
 }
 
 footer {
-    height: 85px;
+    height: 90px;
+}
+
+.BYUIlink {
+    color:rgb(147, 147, 205)
 }
 
 #lastmodified {
