--- a/styles/medium.css
+++ b/styles/medium.css
@@ -13,7 +13,7 @@
     }
 
     header img {
-        float: right;
+        margin-right: 10px;
         border-radius: 25px;
         border: 1px solid #000000;
     }
