--- a/Lesson2/styles/small.css
+++ b/Lesson2/styles/small.css
@@ -28,7 +28,7 @@ header h2 {
 header,
 footer {
     text-align: center;
-    background-color: rgb(1, 10, 35);
+    background-color: #161A25;
     color: #ccc;
     margin: 0 auto;
     border-radius: 10px;
