--- a/Lesson-3/styles/small.css
+++ b/Lesson-3/styles/small.css
@@ -63,4 +63,42 @@ nav li a {
 nav li a:link {
     text-decoration: none;
 }
-
+.primary {
+    background-color: #4AC7AB;
+}
+.accent1 {
+    background-color: #2E688A;
+}
+.accent2 {
+    background-color: #308BB9;
+}
+.accent3 {
+    background-color: #507083;
+}
+.accent4 {
+    background-color: #161A25;
+    color: whitesmoke;
+}
+.h1-font {
+    font-family: 'Encode sans';
+    line-height: 1.25;
+}
+.navigation-font {
+    font-family: Lora;
+    line-height: 1;
+}
+#h2-font {
+    font-family: 'Encode sans';
+    line-height: 1;
+}
+#h3-font {
+    font-family: 'Encode sans';
+    line-height: 1;
+}
+#p-font {
+    font-family: Lora;
+    line-height: 1;
+}
+.BYUIlink {
+    color:rgb(147, 147, 205)
+}
